2004-10-21  Martin Schaffner  <maschaffner@gmx.ch>

	* libmve/mveplay.c: make it compile on Cygwin

2004-10-14  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/config.c: fix bug uncovered by having fgets cut off ending \n

	* main/text.c: fix crash on Mac OS X, probably fix bug 738

	* include/mono.h: add mprintf support for carbon (Mac OS 9)

2004-10-09  Martin Schaffner  <maschaffner@gmx.ch>

	* main/automap.c, main/cntrlcen.c, main/collide.c, main/endlevel.c,
	main/gamerend.c, main/gameseq.c, main/mission.h, main/titles.c:
	use new macros PLAYING_BUILTIN_MISSION and EMULATING_D1 for accessing
	information about the current mission, for easier code refactorisation.

	* cfile/cfile.c: correct warnings caused by change of 2004-09-30

	* main/gamemine.c, main/piggy.c: fix bug 1675:
	use better d2 textures if d1 hog is present but not loadable

2004-09-30  Martin Schaffner  <maschaffner@gmx.ch>

	* cfile/cfile.c: simplify, reduce number of global vars

2004-09-05  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gameseg.c: fix bugfix of 2004-05-15

2004-08-29  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* cfile/cfile.c: change macify_dospath to macify_posix_path for carbon

	* cfile/cfile.c, main/config.c, main/credits.c, main/endlevel.c,
	main/gamesave.c, main/inferno.c, main/mission.c, main/songs.c:
	cfgets now always copies the terminating character to the dest buffer.
	This fixes a bug that occured when reading cmd line args from d2x.ini

2004-08-29  Martin Schaffner  <maschaffner@gmx.ch>

	* ChangeLog-old, main/editor/med.c, main/editor/segment.c:
	move more old change logs into ChangeLog-old

2004-08-28  Chris Taylor  <c.taylor@student.curtin.edu.au>
	    and Martin Schaffner  <maschaffner@gmx.ch>

	* 2d/2dsline.c, 2d/bitblt.c, 2d/bitmap.c, 2d/clip.h, 2d/ibitblt.c
	2d/linear.asm, 2d/palette.c, 2d/pcx.c, 2d/rle.c, 2d/scale.c
	2d/scalea.asm, 3d/clipper.h, 3d/globvars.c, 3d/globvars.h